--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ footer p {
 }
 
 .project a {
-    color: rgb(182, 182, 255); /* Change the color to your desired color */
+    color: #ffb963; /* Change the color to your desired color */
     font-family: Arial, sans-serif; /* Change the font family to your desired font */
     font-size: 16px; /* Change the font size to your desired size */
     /* text-align: left; */
